# kiara_plugin.service

./: .cruft.json  .gitignore  Makefile  mkdocs.yml  pixi.toml  pyproject.toml  setup.cfg
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
0.4.0/: 404.html
0.4.0/info/SUMMARY/: index.html
0.4.0/info/module_types/: index.html
0.4.0/reference/kiara_plugin/service/__init__/: index.html
0.4.0/reference/kiara_plugin/service/data_types/: index.html
0.4.0/reference/kiara_plugin/service/defaults/: index.html
0.4.1/: 404.html  index.html
0.4.1/SUMMARY/: index.html
0.4.1/development/: index.html
0.4.1/info/SUMMARY/: index.html
0.4.1/info/kiara_model_types/: index.html
0.4.1/info/module_types/: index.html
0.4.1/info/operations/: index.html
0.4.1/reference/SUMMARY/: index.html
0.4.1/usage/: index.html
0.4.2/: objects.inv
0.4.2/info/kiara_model_types/: index.html
0.4.2/info/module_types/: index.html
0.4.2/search/: search_index.json
0.4.2/usage/: index.html
0.4.3/SUMMARY/: index.html
0.4.3/development/: index.html
0.4.3/info/SUMMARY/: index.html
0.4.3/search/: search_index.json
0.4.4/development/: index.html
0.4.4/search/: search_index.json
0.4.5/info/SUMMARY/: index.html
0.4.5/info/kiara_model_types/: index.html
0.4.6/info/operations/: index.html
0.4.6/reference/SUMMARY/: index.html
0.4.6/search/: search_index.json
0.4.7/: 404.html
0.4.7/development/: index.html
0.4.7/info/SUMMARY/: index.html
0.4.7/info/module_types/: index.html
0.4.7/reference/SUMMARY/: index.html
0.4.7/usage/: index.html
ci/conda/kiara_plugin.service/: meta.yaml.template
docs/: index.md
examples/jobs/: example_job_service.yaml
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/SUMMARY/: index.html
latest/development/: index.html
latest/info/SUMMARY/: index.html
latest/info/kiara_model_types/: index.html
latest/info/module_types/: index.html
latest/info/operations/: index.html
latest/reference/SUMMARY/: index.html
latest/search/: search_index.json
latest/usage/: index.html
scripts/documentation/: gen_module_doc.py
src/kiara_plugin/service/: __init__.py  defaults.py  models.py
src/kiara_plugin/service/modules/: __init__.py
src/kiara_plugin/service/openapi/: __init__.py  service.py
src/kiara_plugin/service/resources/static/: input.css  (+1 more)
stable/development/: index.html
stable/info/kiara_model_types/: index.html
(+128 files in other folders)
